--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock|Paper|Scissors </title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <h1 class="title">Man Vs Computer</h1>
+<div class="button-container">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+</div> 
+<div id="result-container">  
+<div class="result-display"><h2>Will You Win?</h2></div>
+</div>
+<div class="score-container">
+    <div class="human-score">
+        <div class="h-s-text"><h3>Your Score:</h3></div>
+        <div class="h-s-num">0</div>
+</div>
+    <div class="computer-score">
+        <div class="c-s-text"><h3>Computer Score:</h3></div>
+        <div class="c-s-num">0</div>
+    </div>
+</div>
 </body>
-<script src="script.js"></script>
 </html>
