Add a cool font and some button effects

--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1 class="title">Man Vs Computer</h1>
+    <div class="head-text">
+        <h1 class="title">A Game of Rock Paper Scissors!</h1>
+        <p class="sub-title">Press the buttons to play.</p>
+    </div>
 <div class="button-container">
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
 </div> 
 <div id="result-container">  
-<div class="result-display"><h2>Will You Win?</h2></div>
+<div class="result-display"><h2>Can You Win?</h2></div>
 </div>
 <div class="score-container">
     <div class="human-score">
         <div class="h-s-text"><h3>Your Score:</h3></div>
         <div class="h-s-num">0</div>
-</div>
+    </div>
     <div class="computer-score">
         <div class="c-s-text"><h3>Computer Score:</h3></div>
         <div class="c-s-num">0</div>
