Add round result div

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </div> 
 <div id="result-container">  
 <div class="result-display"><h2>Can You Win?</h2></div>
+<div class="round-result"><p></p></div>
 </div>
 <div class="score-container">
     <div class="human-score">
