--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         <div class="c-s-num">0</div>
     </div>
 </div>
+<audio id="click" src="./click.mp3" type="audio/mpeg"></audio>
 </body>
 </html>
