Add some minor details.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <div class="head-text">
         <h1 class="title">A Game of Rock Paper Scissors!</h1>
-        <p class="sub-title">Press the buttons to play.</p>
+        <p class="sub-title">Click the buttons to play.</p>
     </div>
 <div class="button-container">
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
 </div> 
+
 <div id="result-container">  
 <div class="result-display"><h2>Can You Win?</h2></div>
 <div class="round-result"><p></p></div>
