--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
     <div class="human-score">
         <div class="h-s-text"><h3>Your Score:</h3></div>
         <div class="h-s-num">0</div>
-        <div class="userChoice"></div>
     </div>
+    <button id="new-game">New Game</button>
     <div class="computer-score">
         <div class="c-s-text"><h3>Computer Score:</h3></div>
         <div class="c-s-num">0</div>
-        <div class="compChoice"></div>
     </div>
 </div>
 <audio id="click" src="./click.mp3" type="audio/mpeg"></audio>
